Fix scrolling issue on mobile

--- a/public/style.css
+++ b/public/style.css
@@ -8,7 +8,8 @@
 body{
     width: 100%;
     height: 100vh;
-    overflow: hidden;
+    overflow-x: hidden;
+    overflow-y: auto;
     background-color: black;
 }
 nav{
